@@ -8,10 +8,9 @@ import net.minecraft.world.level.levelgen.placement.NoiseThresholdCountPlacement
 import net.minecraft.world.level.levelgen.placement.InSquarePlacement;
 import net.minecraft.world.level.levelgen.placement.CountPlacement;
 import net.minecraft.world.level.levelgen.placement.BiomeFilter;
-import net.minecraft.world.level.levelgen.feature.trunkplacers.GiantTrunkPlacer;
-import net.minecraft.world.level.levelgen.feature.treedecorators.AlterGroundDecorator;
+import net.minecraft.world.level.levelgen.feature.trunkplacers.StraightTrunkPlacer;
 import net.minecraft.world.level.levelgen.feature.stateproviders.BlockStateProvider;
-import net.minecraft.world.level.levelgen.feature.foliageplacers.MegaPineFoliagePlacer;
+import net.minecraft.world.level.levelgen.feature.foliageplacers.BlobFoliagePlacer;
 import net.minecraft.world.level.levelgen.feature.featuresize.TwoLayersFeatureSize;
 import net.minecraft.world.level.levelgen.feature.configurations.TreeConfiguration;
 import net.minecraft.world.level.levelgen.feature.Feature;
@@ -22,7 +21,6 @@ import net.minecraft.world.level.biome.Climate;
 import net.minecraft.world.level.biome.BiomeSpecialEffects;
 import net.minecraft.world.level.biome.BiomeGenerationSettings;
 import net.minecraft.world.level.biome.Biome;
-import net.minecraft.util.valueproviders.UniformInt;
 import net.minecraft.util.valueproviders.ConstantInt;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.resources.ResourceLocation;
@@ -39,8 +37,6 @@ import net.mcreator.foreigntechnologies.init.ForeignTechnologiesModBiomes;
 
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
-
 public class EtheroverworldBiome {
 	public static final Climate.ParameterPoint PARAMETER_POINT = new Climate.ParameterPoint(Climate.Parameter.span(-0.619047619048f, -0.04761904762f),
 			Climate.Parameter.span(-1.285714285714f, -0.714285714286f), Climate.Parameter.span(0.224285714286f, 0.795714285714f),
@@ -52,19 +48,18 @@ public class EtheroverworldBiome {
 				.skyColor(-16777216).foliageColorOverride(-13421773).grassColorOverride(-13421773)
 				.ambientLoopSound(new SoundEvent(new ResourceLocation("foreign_technologies:etheraudio1"))).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register(
-				"foreign_technologies:tree_etheroverworld",
-				FeatureUtils.register("foreign_technologies:tree_etheroverworld", Feature.TREE,
-						new TreeConfiguration.TreeConfigurationBuilder(
-								BlockStateProvider.simple(ForeignTechnologiesModBlocks.ETHER_STALK.get().defaultBlockState()),
-								new GiantTrunkPlacer(16, 2, 14),
-								BlockStateProvider.simple(ForeignTechnologiesModBlocks.ETHER_GLASS.get().defaultBlockState()),
-								new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(13, 17)),
-								new TwoLayersFeatureSize(1, 1, 2))
-								.decorators(ImmutableList.of(new AlterGroundDecorator(BlockStateProvider.simple(Blocks.PODZOL.defaultBlockState()))))
-								.build()),
-				List.of(CountPlacement.of(10), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-						PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
+		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
+				PlacementUtils.register("foreign_technologies:tree_etheroverworld",
+						FeatureUtils.register("foreign_technologies:tree_etheroverworld", Feature.TREE,
+								new TreeConfiguration.TreeConfigurationBuilder(
+										BlockStateProvider.simple(ForeignTechnologiesModBlocks.ETHER_STALK.get().defaultBlockState()),
+										new StraightTrunkPlacer(16, 2, 0),
+										BlockStateProvider.simple(ForeignTechnologiesModBlocks.ETHER_GLASS.get().defaultBlockState()),
+										new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
+										.ignoreVines().build()),
+						List.of(CountPlacement.of(10), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
+								PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING),
+								BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
 				PlacementUtils.register("foreign_technologies:grass_etheroverworld", VegetationFeatures.PATCH_GRASS,
 						List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 10), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
